[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/GUI/chat background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Pixel font.tres" type="Theme" id=2]
[ext_resource path="res://frontend/GUI/ConfirmationTextBox.gd" type="Script" id=3]

[node name="ConfirmationTextBox" type="Node2D"]
position = Vector2( 514.088, 273.881 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.82443, 3.1933 )
scale = Vector2( 0.842184, 0.533831 )
texture = ExtResource( 1 )

[node name="TextLabel" type="Label" parent="."]
margin_left = -156.337
margin_top = -101.126
margin_right = 156.663
margin_bottom = -34.1263
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="."]
margin_left = 67.1806
margin_top = -2.62469
margin_right = 146.181
margin_bottom = 17.3753
text = "Querdarse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationButton" type="Button" parent="."]
margin_left = -102.234
margin_top = -2.62469
margin_right = -80.2337
margin_bottom = 17.3753
text = "Ir"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="ConfirmationButton" to="." method="_on_ConfirmationButton_pressed"]
